[Fix] product card v-alignment

--- a/clothing-store-website/styles.css
+++ b/clothing-store-website/styles.css
@@ -333,7 +333,7 @@ body {
   justify-content: center;
   justify-items: center;
   align-content: center;
-  align-items: center;
+  align-items: start;
 
   margin-bottom: 75px;
 }
